--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_launcher_icons: ^0.14.4
   screenshot: ^3.0.0
+  cached_network_image: ^3.4.1
 
 flutter_launcher_icons:
   android: true
